@startuml Repository

title Repository Pattern — Persistence Abstraction

skinparam classAttributeIconSize 0
skinparam classFontStyle bold

' ── Repository interfaces ──────────────────────────────────────
interface IDuplicateFingerprintRepository <<interface>> {
  + ExistsAsync(...) : Task<bool>
  + AddUploadedEntryAsync(...) : Task
}

interface ICommandExecutionTracker <<interface>> {
  + TrackAsync(...) : Task
}

interface IUploadSessionCaretaker <<interface>> {
  + SaveMementoAsync(memento : UploadSessionMemento) : Task
  + GetPendingSessionsAsync() : Task<IEnumerable<UploadSessionMemento>>
  + RemoveMementoAsync(sessionId : string) : Task
}

' ── Concrete Repositories ──────────────────────────────────────
class SqliteDuplicateFingerprintRepository {
  + ExistsAsync(...) : Task<bool>
  + AddUploadedEntryAsync(...) : Task
}

class SqliteCommandExecutionTracker {
  + TrackAsync(...) : Task
}

class SqliteUploadSessionCaretaker {
  + SaveMementoAsync(...) : Task
  + GetPendingSessionsAsync(...) : Task
  + RemoveMementoAsync(...) : Task
}

' ── Realizations ───────────────────────────────────────────────
SqliteDuplicateFingerprintRepository ..|> IDuplicateFingerprintRepository
SqliteCommandExecutionTracker ..|> ICommandExecutionTracker
SqliteUploadSessionCaretaker ..|> IUploadSessionCaretaker

note right of IUploadSessionCaretaker
  **New Repository**
  Added to support the Memento 
  pattern for upload recovery.
end note

footer Repository Pattern · NurFlac
@enduml
